smaller inline blocks to avoid overlapping other text

--- a/theme/tutorial.less
+++ b/theme/tutorial.less
@@ -217,11 +217,10 @@ span.docs.inlinebutton {
 }
 
 span.docs.inlineblock {
-    padding: .2rem .5rem;
+    padding: 0.0rem .2rem;
     border-radius: .2rem;
     white-space: nowrap;
     background-color: @inlineBlockColor;
-    border: 1px solid darken(@inlineBlockColor, 0.2);
     color: @white;
     font-family: @blocklyFont !important;
     font-size: 1em !important;
